# django_notificator

./: Dockerfile  cmd.sh  docker-compose.yml  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
celeryworker/: Dockerfile  celeryworker.py  entrypoint.sh  pyproject.toml
django_notification/: __init__.py  asgi.py  celery.py  settings.py  urls.py
newapp/: tasks.py
notification/: admin.py  consumers.py  models.py  tasks.py  views.py
notification/migrations/: 0001_initial.py
notification/templates/: notification_page.html
notification/templates/admin/: custom_add_form.html
