[tool.poetry]
name = "django-notification"
version = "0.1.0"
description = ""
authors = ["Veronelli <facu2000veronelli@outlook.com>"]
readme = "README.md"
packages = [{include = "django_notification"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
uvicorn = "^0.30.1"
channels = "^4.1.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
